force-app/main/default/objects/Purchase_Order_Snapshot__c/Purchase_Order_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Snapshot</label>
    <nameField>
        <displayFormat>POS-{00000000}</displayFormat>
        <label>Purchase Order Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>