force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Bill_Created__c.field-meta.xml
<CustomField>
    <fullName>Bill_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Created?</label>
    <type>Checkbox</type>
</CustomField>