force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Purchase Order Snapshot</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>