force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>Purchase Order Snapshot</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>