force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Cultivation_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Tax_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cultivation Tax Exempt</label>
    <type>Checkbox</type>
</CustomField>