force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Distributor_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Distributor_City_State_Zip__c</fullName>
    <label>Distributor City, State, Zip</label>
    <length>150</length>
    <type>Text</type>
</CustomField>