force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Distributor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Distributor Contact)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot3</relationshipName>
    <type>Lookup</type>
</CustomField>