force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Distributor_Email__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Email__c</fullName>
    <label>Distributor Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>