force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Distributor_License__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor License</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Purchase Order Snapshot</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>