force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Distributor_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Distributor_License_Number__c</fullName>
    <label>Distributor License Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>