force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Distributor Name)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot4</relationshipName>
    <type>Lookup</type>
</CustomField>