force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Distributor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Phone__c</fullName>
    <label>Distributor Phone</label>
    <length>150</length>
    <type>Text</type>
</CustomField>