force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Drivers__c</referenceTo>
    <relationshipLabel>Purchase Order Snapshot</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>