force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/drivers__c.field-meta.xml
<CustomField>
    <fullName>drivers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Purchase Order Snapshot</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>