force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Factoring_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Assignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Factoring Assignee)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot3</relationshipName>
    <type>Lookup</type>
</CustomField>