force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Factoring_Contact__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factoring Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Factoring Contact)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot2</relationshipName>
    <type>Lookup</type>
</CustomField>