force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Factoring_Rate__c.field-meta.xml
<CustomField>
    <fullName>Factoring_Rate__c</fullName>
    <label>Factoring Rate (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>