force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Flash_Title_Date__c.field-meta.xml
<CustomField>
    <fullName>Flash_Title_Date__c</fullName>
    <label>Flash Title Date</label>
    <type>DateTime</type>
</CustomField>