force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Goods_Receipt_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Goods_Receipt_Closed_Date__c</fullName>
    <label>Goods Receipt Closed Date</label>
    <type>Date</type>
</CustomField>