force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Is_Brand_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Brand Product</label>
    <type>Checkbox</type>
</CustomField>