force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>