force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Account)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot2</relationshipName>
    <type>Lookup</type>
</CustomField>