force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Pick_up_City__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_City__c</fullName>
    <label>Pick-up City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>