force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/PO_Balance__c.field-meta.xml
<CustomField>
    <fullName>PO_Balance__c</fullName>
    <label>PO Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>