force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/PO_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Status__c</fullName>
    <label>PO Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>