force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <label>PO Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>