force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>150</length>
    <type>Text</type>
</CustomField>