force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Receiver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Contact)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot1</relationshipName>
    <type>Lookup</type>
</CustomField>