force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Receiver_Email__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Email__c</fullName>
    <label>Receiver Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>