force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Receiver_License__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver License</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Receiver License)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot1</relationshipName>
    <type>Lookup</type>
</CustomField>