force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Receiver_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Receiver_License_Number__c</fullName>
    <label>Receiver License Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>