force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Receiver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Phone__c</fullName>
    <label>Receiver Phone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>