force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Retailer_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Collection_Status__c</fullName>
    <label>Retailer Collection Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>