force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Service_Booking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Booking_Fee__c</fullName>
    <label>Service Booking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>