force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <length>150</length>
    <type>Text</type>
</CustomField>