force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Sold_to_Party_DBA__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Party_DBA__c</fullName>
    <label>Sold to Party DBA</label>
    <length>150</length>
    <type>Text</type>
</CustomField>