force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email__c</fullName>
    <label>Supplier Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>