force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Supplier_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_First_Name__c</fullName>
    <label>Supplier First Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>