force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Supplier_License__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier License</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Supplier License)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot2</relationshipName>
    <type>Lookup</type>
</CustomField>