force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Supplier_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_License_Number__c</fullName>
    <label>Supplier License Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>