force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order Snapshot (Supplier Name)</relationshipLabel>
    <relationshipName>Purchase_Order_Snapshot1</relationshipName>
    <type>Lookup</type>
</CustomField>