force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Supplier_Payable_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Payable_Date__c</fullName>
    <label>Supplier Payable Date</label>
    <type>Date</type>
</CustomField>