force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Supplier_Payment_Settled_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Payment_Settled_Date__c</fullName>
    <label>Supplier Payment Settled Date</label>
    <type>Date</type>
</CustomField>