force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Total_Partially_Received_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Partially_Received_Lines__c</fullName>
    <label>Total Partially Received Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>