force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Window_End__c.field-meta.xml
<CustomField>
    <fullName>Window_End__c</fullName>
    <label>Window End</label>
    <type>Time</type>
</CustomField>