force-app/main/default/objects/Purchase_Order_Snapshot__c/fields/Window_Start_End__c.field-meta.xml
<CustomField>
    <fullName>Window_Start_End__c</fullName>
    <label>Window Start &amp; End</label>
    <length>150</length>
    <type>Text</type>
</CustomField>